fix: overflow reaction bar

--- a/src/app/pages/chat-room/chat-room.scss
+++ b/src/app/pages/chat-room/chat-room.scss
@@ -241,6 +241,7 @@ app-message-list {
   flex: 1;
   overflow-y: auto;
   scrollbar-width: thin;
+  padding-top: 21px;
 }
 
 
